# build_env

./: .gitignore
agv/: .clang-format  .clang-tidy  .gitignore  history  lastday.md
agv/.config/: agv.repos
agv/.env/: bashrc  format-code.bash  manage-ide.bash  manage-project.bash  robot.bash
common/: uncrustify.cfg
common/.env/: format-code.bash
common/config/: agv.repos  other.repos  red.repos
common/continue/: config.json
common/devcontainer/: cyber.dockerfile  hirain.dockerfile  ros2.dockerfile  yocto.dockerfile
common/env/: bashrc  create-user.bash  install-ros2.bash  sshconfig  system.bash
common/terminal/: settings.json
common/vscode/: extensions.json  keybindings.json  settings.json  tasks.json
cyber-rt/: README.md
cyber-rt/.config/: build-args.yaml
cyber-rt/patch/: 0001-cyber-refactor-build.patch
open-loong/: .config  open-loong.repos
quadruped/: .clang-tidy  .gitignore  INSTALL.md  README.md  RUNME.bash  TODO.md  format_code.sh  uncrustify.cfg
quadruped/docs/: package.xml
quadruped/docs/debug/: motor_model.md
quadruped/docs/env/: function_description.md
quadruped/docs/git/: README.md
quadruped/docs/intro/: controller_manager.md  example_a1_sim.md  gazebo.md  gazebo_add_contact_plugin.md  how_to_write_ros2_control.md  intro_2.md  intro_3.md  quadruped_log.md  ros2与gazebo通信.md
quadruped/docs/rosdep/: README.md
quadruped/docs/rosdistro/: README.md
quadruped/docs/sensor/: rviz-imu.md  wit-imu.md
red/: .clang-format  .clang-tidy  .cpplint  .gitignore  README.md
ros2/: .devcontainer  .gitignore  RUNME.bash
(+61 files in other folders)
