<?xml version="1.0"?>
<package format="2">
    <name>quadruped_docs</name>
    <version>0.0.1</version>
    <description>The quadruped package for ros2</description>

    <maintainer email="postrantor@gmail.com">postrantor</maintainer>
    <license>MIT</license>

    <!-- system -->
    <buildtool_depend>tree</buildtool_depend>
    <buildtool_depend>net-tools</buildtool_depend>
    <buildtool_depend>openssh-server</buildtool_depend>
    <buildtool_depend>openssh-client</buildtool_depend>

    <!-- ide -->
    <buildtool_depend>g++-10</buildtool_depend>
    <buildtool_depend>vim</buildtool_depend>
    <buildtool_depend>clang-format</buildtool_depend>
    <buildtool_depend>clang-tidy</buildtool_depend>
    <buildtool_depend>clangd</buildtool_depend>
    <buildtool_depend>git</buildtool_depend>

    <!-- test -->
    <test_depend>test_msgs</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
